plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.jetbrains.kotlin.jvm' version '1.9.24'
	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.24'
}

group = 'smu'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

ext {
	set('springCloudVersion', "2023.0.1")
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {

	// web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// DB
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql:42.7.3'

	// flyway
	implementation 'org.flywaydb:flyway-core:10.15.2'
	implementation 'org.flywaydb:flyway-database-postgresql:10.15.2'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// caffeine
	implementation "org.springframework.boot:spring-boot-starter-cache"
	implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"

	// mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// csv
	implementation 'org.apache.commons:commons-csv:1.10.0'
	implementation 'commons-io:commons-io:2.15.1'

	// queryDSL
	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	testAnnotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"

	// aws sdk
	implementation "software.amazon.awssdk:s3"
	implementation(platform("software.amazon.awssdk:bom:2.25.60"))

	// circuit breaker
	implementation 'io.github.resilience4j:resilience4j-spring-boot3'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// elasticsearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

def querydslDir = "build/generated/querydsl"

sourceSets {
	main.java.srcDirs += querydslDir
}

tasks.withType(JavaCompile) {
	options.generatedSourceOutputDirectory = file(querydslDir)
}

